{
  "version": 4,
  "terraform_version": "1.16.3",
  "serial": 45,
  "lineage": "30797f88-c7b4-315c-4c86-72f3d5bf806c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:685306736016:internet-gateway/igw-0fdaa5e339080c754",
            "id": "igw-0fdaa5e339080c754",
            "owner_id": "685306736016",
            "region": "us-west-2",
            "tags": {
              "Name": "Astro - IGW"
            },
            "tags_all": {
              "Name": "Astro - IGW"
            },
            "vpc_id": "vpc-0ee081aff270b4f48"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "685306736016",
            "id": "igw-0fdaa5e339080c754",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:685306736016:route-table/rtb-063b0c0f947d4df2f",
            "id": "rtb-063b0c0f947d4df2f",
            "owner_id": "685306736016",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fdaa5e339080c754",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Astro - Public RT"
            },
            "tags_all": {
              "Name": "Astro - Public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee081aff270b4f48"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "685306736016",
            "id": "rtb-063b0c0f947d4df2f",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043287a7778c8d694",
            "region": "us-west-2",
            "route_table_id": "rtb-063b0c0f947d4df2f",
            "subnet_id": "subnet-09254a6c58270f845"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "685306736016",
            "id": "rtbassoc-043287a7778c8d694",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a288a185c9423754",
            "region": "us-west-2",
            "route_table_id": "rtb-063b0c0f947d4df2f",
            "subnet_id": "subnet-0345d874719c76599"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "685306736016",
            "id": "rtbassoc-0a288a185c9423754",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet_2",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:685306736016:security-group/sg-078eca18bbf34849b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078eca18bbf34849b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "astro-web-sg",
            "name_prefix": "",
            "owner_id": "685306736016",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Astro - Web SG"
            },
            "tags_all": {
              "Name": "Astro - Web SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee081aff270b4f48"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "685306736016",
            "id": "sg-078eca18bbf34849b",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:685306736016:subnet/subnet-09254a6c58270f845",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.64.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09254a6c58270f845",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "685306736016",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "Astro - Subnet - 1"
            },
            "tags_all": {
              "Name": "Astro - Subnet - 1"
            },
            "vpc_id": "vpc-0ee081aff270b4f48"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "685306736016",
            "id": "subnet-09254a6c58270f845",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:685306736016:subnet/subnet-0345d874719c76599",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.65.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0345d874719c76599",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "685306736016",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "Astro - Subnet - 2"
            },
            "tags_all": {
              "Name": "Astro - Subnet - 2"
            },
            "vpc_id": "vpc-0ee081aff270b4f48"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "685306736016",
            "id": "subnet-0345d874719c76599",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:685306736016:vpc/vpc-0ee081aff270b4f48",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.64.0/20",
            "default_network_acl_id": "acl-0e50815fed620315a",
            "default_route_table_id": "rtb-0c4439b81734053fb",
            "default_security_group_id": "sg-01ef87367258bc764",
            "dhcp_options_id": "dopt-844e38fc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ee081aff270b4f48",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c4439b81734053fb",
            "owner_id": "685306736016",
            "region": "us-west-2",
            "tags": {
              "Name": "Astro - Atos"
            },
            "tags_all": {
              "Name": "Astro - Atos"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "685306736016",
            "id": "vpc-0ee081aff270b4f48",
            "region": "us-west-2"
          }
        }
      ]
    }
  ]
}